<resources>
    <string name="app_name">VPNbullet: Fast &amp; Stable VPN</string>
    <!--    Main Id's-->

<!--    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="banner_adds_key">ca-app-pub-4660381108030921/8704658006</string>-->
<!--    <string name="interstial_adds_keys">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="native_advanced_ad_keys">ca-app-pub-4660381108030921/5858184572</string>-->
<!--    <string name="open_app_adds_keys">ca-app-pub-4660381108030921/2465734474</string>-->
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesia">Indonesia</string>
    <string name="korean">Korean</string>
    <string name="language">Language</string>

    <!--    Test Ads-->
        <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
        <string name="banner_adds_key">ca-app-pub-3940256099942544/6300978111</string>
        <string name="interstial_adds_keys">ca-app-pub-3940256099942544/1033173712</string>
        <string name="native_advanced_ad_keys">ca-app-pub-3940256099942544/2247696110</string>
        <string name="reword_ad_keys">ca-app-pub-3940256099942544/5224354917</string>
        <string name="open_app_adds_keys">ca-app-pub-3940256099942544/3419835294</string>


    <string name="first_boarding_title">Safe and Secured</string>
    <string name="second_boarding_title">Best Server</string>
    <string name="third_boarding_title">Trusted VPN App</string>
    <string name="first_boarding_description">We always been committed to protecting your privacy and your data.</string>
    <string name="second_boarding_description">We have best server around the world with super high speed connection.</string>
    <string name="third_boarding_description">Trackless VPN is easy-to-use VPN app for Android, trusted by many of users worldwide.</string>
    <string name="btn_allow_vpn">Allow VPN</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disconnect">Disconnect</string>
    <string name="tap_to_connect">Tap to Connect</string>
    <string name="connected">Connected</string>
    <string name="notify"> notification</string>

    <string name="best_performance_server">Smart Location</string>
    <string name="account">Account</string>
    <string name="premium">Premium</string>
    <string name="user_id">User ID</string>
    <string name="logout">Logout</string>
    <string name="connection_report">Connection Report</string>
    <string name="this_is_a_summary_of_information_from_using_vpnite_while_connected">This is a summary of information from using Trackless VPN while connected</string>
    <string name="location">Location</string>
    <string name="ip_address">IP Address</string>
    <string name="duration">Duration</string>
    <string name="data_used">Data Used</string>
    <string name="submit">Submit</string>
    <string name="subject">Subject</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="allow_vpn">allow vpn</string>
    <string name="continue_">Continue</string>
    <string name="connecting_time">Connecting Time</string>
    <string name="smart_location">Smart Location</string>
    <string name="fastest_server">Fastest Server</string>
    <string name="downloading">Downloading</string>
    <string name="upload">Upload</string>
    <string name="upgrade_to_premium_now">Upgrade to Premium Now</string>
    <string name="access_all_servers_worldwide_fast_and_powerful">Access all servers worldwide, fast and powerful</string>
    <string name="no_ads">No Ads</string>
    <string name="enjoy_surfing_without_ads">Enjoy VPN without ads</string>
    <string name="fast">Ultra Speed</string>
    <string name="increase_connection_speed">Optimized fast speed</string>
    <string name="all_servers">Access All Servers</string>
    <string name="access_all_server_worldwide">Secure access all servers worldwide</string>
    <string name="_1_week">1 WEEK</string>
    <string name="link_up_to_1_device">Link up to 1 Device</string>
    <string name="_1_month">1 MONTH</string>
    <string name="link_up_to_2_device">Link up to 2 Device</string>
    <string name="_1_year">1 YEAR</string>
    <string name="link_up_to_4_device">Link up to 4 Device</string>
    <string name="_2_99">$2.99</string>
    <string name="month">/ month</string>
    <string name="_9_99">$9.99</string>
    <string name="setting">Setting</string>
    <string name="connection_mode">Connection mode</string>
    <string name="anonymous_statistics">Anonymous statistics</string>
    <string name="connect_when_app_starts">Connect when app starts</string>
    <string name="show_notification">Run In Backgroud</string>
    <string name="switch_block">Switch block</string>
    <string name="block_internet_when_conecting_or_changing_servers">Block internet when conecting or changing servers</string>
    <string name="imrpove_connection_stability">Imrpove connection stability</string>
    <string name="term_of_service">Term of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_apps">More Apps</string>
    <string name="about">About</string>
    <string name="speed_test">Speed Test</string>
    <string name="download">Download</string>
    <string name="mb_s">- Mb/s</string>
    <string name="ping">Ping</string>
    <string name="ms">- ms</string>
    <string name="jitter">Jitter</string>
    <string name="loss">Loss</string>
    <string name="speed_test_now">Speed Test Now</string>
    <string name="are_you_sure_to_disconnect">Are you sure to disconnect?</string>
    <string name="cancel">Cancel</string>
    <string name="my_account">My Account</string>
    <string name="split_tunneling">Split Tunneling</string>
    <string name="share">Share</string>
    <string name="login">LOGIN</string>
    <string name="carrier_id">Carrier ID:</string>
    <string name="host_url">Host Url:</string>
    <string name="network_error">Network error…</string>
    <string name="network_error_message">Internet is not available, reconnect network and try again.</string>
    <string name="ok">Ok</string>
    <string name="create">Create</string>
    <string name="create_account_and_enjoy_7_day_free_trial">Create account and enjoy 7 day free trial</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_the_country">Change the country</string>
    <string name="entercarddetails">Enter card details</string>
    <string name="server">Server</string>
    <string name="todo">TODO</string>
    <string name="zero">00</string>

</resources>