<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".trackless.vpn.activity.SettingActivity">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/baloo"
                android:text="@string/setting"
                android:textColor="@color/purple"
                android:textSize="20sp" />


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:visibility="visible"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_weight="1"
                            android:fontFamily="@font/baloo"
                            android:text="Trackless VPN"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/baloo"
                        android:text="V 1.0.22"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    </LinearLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:src="@color/purple" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo"
                        android:text="@string/anonymous_statistics"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_anonymous_statistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="10dp"
                        android:scaleX="1.3"
                        android:scaleY="1.3"
                        android:thumb="@drawable/thumb"
                        app:switchMinWidth="25dp"
                        app:track="@drawable/track" />


                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:src="@color/purple" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo"
                        android:text="@string/connect_when_app_starts"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_connect_when_app_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="10dp"
                        android:scaleX="1.3"
                        android:scaleY="1.3"
                        android:thumb="@drawable/thumb"
                        app:switchMinWidth="20dp"
                        app:track="@drawable/track" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat__medium"
                        android:text="@string/show_notification"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_show_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="10dp"
                        android:scaleX="1.3"
                        android:scaleY="1.3"
                        android:thumb="@drawable/thumb"
                        app:switchMinWidth="25dp"
                        app:track="@drawable/track" />


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:fontFamily="@font/montserrat__medium"
                            android:text="@string/imrpove_connection_stability"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/crown_without_bg" />


                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_imrpove_connection_stability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="10dp"
                        android:scaleX="1.3"
                        android:scaleY="1.3"
                        android:thumb="@drawable/thumb"
                        app:switchMinWidth="25dp"
                        app:track="@drawable/track" />


                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:src="@color/purple" />




                <LinearLayout
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:fontFamily="@font/baloo"
                            android:text="@string/privacy_policy"
                            android:textColor="@color/black"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:src="@drawable/right_airo"
                        app:tint="@color/purple" />


                </LinearLayout>




                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:src="@color/purple" />

                <LinearLayout
                    android:id="@+id/Rate_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:fontFamily="@font/baloo"
                            android:text="@string/rate_us"
                            android:textColor="@color/black"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:src="@drawable/right_airo"
                        app:tint="@color/purple" />


                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:src="@color/purple" />
                <LinearLayout
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:fontFamily="@font/baloo"
                            android:text="@string/language"
                            android:textColor="@color/black"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:src="@drawable/right_airo"
                        app:tint="@color/purple" />


                </LinearLayout>



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:src="@color/purple" />

                <LinearLayout
                    android:id="@+id/more_apps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:fontFamily="@font/baloo"
                            android:text="@string/more_apps"
                            android:textColor="@color/black"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:src="@drawable/right_airo"
                        app:tint="@color/purple" />


                </LinearLayout>




                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:src="#3A3A4D" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:fontFamily="@font/montserrat__medium"
                            android:text="@string/about"
                            android:textColor="@color/white"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:padding="7dp"
                        android:src="@drawable/right_airo"
                        app:tint="@color/text_color_gray" />


                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>